# PhotoBatch-Desktop-CLI

./: CMakeLists.txt  README.md
src/: ArgumentParser.cpp  ArgumentParser.h  ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h  StringUtils.cpp  StringUtils.h  main.cpp
